--- a/Техническое задание счет договор/Техническое задание на процесс Счет договор.md
+++ b/Техническое задание счет договор/Техническое задание на процесс Счет договор.md
@@ -10,7 +10,7 @@
 
 Процесс "Счет-договор" включает создание контрагента и его проверку, если контрагент ранее не был создан в системе или был заблокирован по каким-либо причинам, согласование, подписание (по необходимости), оплату и архивацию счетов-договоров. Использование системы Tessa позволит автоматизировать и упростить данный процесс.
 
-![Счет-договор Согласовательный уровень.png](%D0%A2%D0%B5%D1%85%D0%BD%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5%20%D0%B7%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5%20%D0%BD%D0%B0%20%D0%BF%D1%80%D0%BE%D1%86%D0%B5%D1%81%D1%81%20%D0%A1%D1%87%D0%B5%D1%82-%D0%B4%D0%BE%D0%B3%D0%BE%D0%B2%D0%BE%D1%80%20%D0%B2%20%D1%81%D0%B8%D1%81%D1%82%20efeb5aed031849e7a9447f342a7328e9/%25D0%25A1%25D1%2587%25D0%25B5%25D1%2582-%25D0%25B4%25D0%25BE%25D0%25B3%25D0%25BE%25D0%25B2%25D0%25BE%25D1%2580_%25D0%25A1%25D0%25BE%25D0%25B3%25D0%25BB%25D0%25B0%25D1%2581%25D0%25BE%25D0%25B2%25D0%25B0%25D1%2582%25D0%25B5%25D0%25BB%25D1%258C%25D0%25BD%25D1%258B%25D0%25B9_%25D1%2583%25D1%2580%25D0%25BE%25D0%25B2%25D0%25B5%25D0%25BD%25D1%258C.png)
+![Без имени.png](assets/1.png)
 
 # Основные этапы процесса
 
@@ -18,7 +18,7 @@
 
 На данном этапе инициатор или регистратор запускает процесс создания карточки счета-договора, нажав кнопки "Создать карточку- Документы - Счет-договор” и заполняет обязательные поля.
 
-![Без имейцукени.png](%D0%A2%D0%B5%D1%85%D0%BD%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5%20%D0%B7%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5%20%D0%BD%D0%B0%20%D0%BF%D1%80%D0%BE%D1%86%D0%B5%D1%81%D1%81%20%D0%A1%D1%87%D0%B5%D1%82-%D0%B4%D0%BE%D0%B3%D0%BE%D0%B2%D0%BE%D1%80%20%D0%B2%20%D1%81%D0%B8%D1%81%D1%82%20efeb5aed031849e7a9447f342a7328e9/%25D0%2591%25D0%25B5%25D0%25B7_%25D0%25B8%25D0%25BC%25D0%25B5%25D0%25B9%25D1%2586%25D1%2583%25D0%25BA%25D0%25B5%25D0%25BD%25D0%25B8.png)
+![Без имени.png](assets/2.png)
 
 ## Создание и согласование контрагента
 
@@ -30,7 +30,7 @@
 
 После завершения каждой задачи система отправляет уведомление на почту сотрудникам, назначенным в роли "Получатель уведомлений".
 
-![Создание и согласование к_а.png](%D0%A2%D0%B5%D1%85%D0%BD%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5%20%D0%B7%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5%20%D0%BD%D0%B0%20%D0%BF%D1%80%D0%BE%D1%86%D0%B5%D1%81%D1%81%20%D0%A1%D1%87%D0%B5%D1%82-%D0%B4%D0%BE%D0%B3%D0%BE%D0%B2%D0%BE%D1%80%20%D0%B2%20%D1%81%D0%B8%D1%81%D1%82%20efeb5aed031849e7a9447f342a7328e9/%25D0%25A1%25D0%25BE%25D0%25B7%25D0%25B4%25D0%25B0%25D0%25BD%25D0%25B8%25D0%25B5_%25D0%25B8_%25D1%2581%25D0%25BE%25D0%25B3%25D0%25BB%25D0%25B0%25D1%2581%25D0%25BE%25D0%25B2%25D0%25B0%25D0%25BD%25D0%25B8%25D0%25B5_%25D0%25BA_%25D0%25B0.png)
+![Без имени.png](assets/3.png)
 
 ## Согласование счета-договора
 
@@ -48,13 +48,13 @@
 
 Инициатор также имеет возможность отозвать процесс на любом этапе, нажав кнопку "Отозвать процесс", после чего процесс считается отозванным, а все активные задачи отменяются.
 
-![Согласование счет-договора главный процесс.png](%D0%A2%D0%B5%D1%85%D0%BD%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5%20%D0%B7%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5%20%D0%BD%D0%B0%20%D0%BF%D1%80%D0%BE%D1%86%D0%B5%D1%81%D1%81%20%D0%A1%D1%87%D0%B5%D1%82-%D0%B4%D0%BE%D0%B3%D0%BE%D0%B2%D0%BE%D1%80%20%D0%B2%20%D1%81%D0%B8%D1%81%D1%82%20efeb5aed031849e7a9447f342a7328e9/%25D0%25A1%25D0%25BE%25D0%25B3%25D0%25BB%25D0%25B0%25D1%2581%25D0%25BE%25D0%25B2%25D0%25B0%25D0%25BD%25D0%25B8%25D0%25B5_%25D1%2581%25D1%2587%25D0%25B5%25D1%2582-%25D0%25B4%25D0%25BE%25D0%25B3%25D0%25BE%25D0%25B2%25D0%25BE%25D1%2580%25D0%25B0_%25D0%25B3%25D0%25BB%25D0%25B0%25D0%25B2%25D0%25BD%25D1%258B%25D0%25B9_%25D0%25BF%25D1%2580%25D0%25BE%25D1%2586%25D0%25B5%25D1%2581%25D1%2581.png)
+![Без имени.png](assets/4.png)
 
 ## Подписание счета-договора
 
 Если требуется подпись, документ направляется на подписание. Если подпись не требуется документ уходит в оплату.
 
-![подаись.png](%D0%A2%D0%B5%D1%85%D0%BD%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5%20%D0%B7%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5%20%D0%BD%D0%B0%20%D0%BF%D1%80%D0%BE%D1%86%D0%B5%D1%81%D1%81%20%D0%A1%D1%87%D0%B5%D1%82-%D0%B4%D0%BE%D0%B3%D0%BE%D0%B2%D0%BE%D1%80%20%D0%B2%20%D1%81%D0%B8%D1%81%D1%82%20efeb5aed031849e7a9447f342a7328e9/%25D0%25BF%25D0%25BE%25D0%25B4%25D0%25B0%25D0%25B8%25D1%2581%25D1%258C.png)
+![Без имени.png](assets/5.png)
 
 ## Оплата и отправка контрагенту счета-договора
 
@@ -62,7 +62,7 @@
 
 Если в карточке стоит галочка "отправить контрагенту", документ отправляется контрагенту, после чего работа с экземпляром контрагента считается завершенной. В случае если галочка не установлена, процесс завершается без отправки документа контрагенту.
 
-![оплата и отправка.png](%D0%A2%D0%B5%D1%85%D0%BD%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5%20%D0%B7%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5%20%D0%BD%D0%B0%20%D0%BF%D1%80%D0%BE%D1%86%D0%B5%D1%81%D1%81%20%D0%A1%D1%87%D0%B5%D1%82-%D0%B4%D0%BE%D0%B3%D0%BE%D0%B2%D0%BE%D1%80%20%D0%B2%20%D1%81%D0%B8%D1%81%D1%82%20efeb5aed031849e7a9447f342a7328e9/%25D0%25BE%25D0%25BF%25D0%25BB%25D0%25B0%25D1%2582%25D0%25B0_%25D0%25B8_%25D0%25BE%25D1%2582%25D0%25BF%25D1%2580%25D0%25B0%25D0%25B2%25D0%25BA%25D0%25B0.png)
+![Без имени.png](assets/6.png)
 
 ## Архив счета-договора
 
@@ -70,7 +70,7 @@
 
 Если документ представлен в виде скана (фото, скан-копия, драфт), процесс завершается с изменением статуса на "Оплачено по скану", и дальнейшие действия не требуются, процесс считается завершенным.
 
-![архив.png](%D0%A2%D0%B5%D1%85%D0%BD%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5%20%D0%B7%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5%20%D0%BD%D0%B0%20%D0%BF%D1%80%D0%BE%D1%86%D0%B5%D1%81%D1%81%20%D0%A1%D1%87%D0%B5%D1%82-%D0%B4%D0%BE%D0%B3%D0%BE%D0%B2%D0%BE%D1%80%20%D0%B2%20%D1%81%D0%B8%D1%81%D1%82%20efeb5aed031849e7a9447f342a7328e9/%25D0%25B0%25D1%2580%25D1%2585%25D0%25B8%25D0%25B2.png)
+![Без имени.png](assets/7.png)
 
 # Описание блоков BPMN
 
