--- a/Техническое задание счет договор/Техническое задание на процесс Счет договор.md
+++ b/Техническое задание счет договор/Техническое задание на процесс Счет договор.md
@@ -1,5 +1,65 @@
 # Техническое задание на процесс "Счет-договор" в системе электронного документооборота Tessa
 
+[Оглавление](#Оглавление)
+- [Техническое задание на процесс "Счет-договор" в системе электронного документооборота Tessa](#техническое-задание-на-процесс-счет-договор-в-системе-электронного-документооборота-tessa)
+- [Введение](#введение)
+  - [Цель проекта](#цель-проекта)
+  - [Описание процесса](#описание-процесса)
+- [Основные этапы процесса](#основные-этапы-процесса)
+  - [Создание карточки счета-договора](#создание-карточки-счета-договора)
+  - [Создание и согласование контрагента](#создание-и-согласование-контрагента)
+  - [Согласование счета-договора](#согласование-счета-договора)
+  - [Подписание счета-договора](#подписание-счета-договора)
+  - [Оплата и отправка контрагенту счета-договора](#оплата-и-отправка-контрагенту-счета-договора)
+  - [Архив счета-договора](#архив-счета-договора)
+- [Описание блоков BPMN](#описание-блоков-bpmn)
+  - [Создание карточки счета-договора](#создание-карточки-счета-договора-1)
+  - [Создание контрагента](#создание-контрагента)
+  - [Согласование контрагента](#согласование-контрагента)
+    - [Отказ в согласовании контрагента](#отказ-в-согласовании-контрагента)
+  - [Согласование инициатора](#согласование-инициатора)
+    - [Доработка с этапа](#доработка-с-этапа)
+  - [Согласование держателя бюджета](#согласование-держателя-бюджета)
+    - [Доработка с этапа](#доработка-с-этапа-1)
+  - [Согласование юридического департамента](#согласование-юридического-департамента)
+    - [Согласование юриста](#согласование-юриста)
+    - [Согласование директора департамента юридического сопровождения бизнеса](#согласование-директора-департамента-юридического-сопровождения-бизнеса)
+    - [Согласование вице-президента по правовым вопросам](#согласование-вице-президента-по-правовым-вопросам)
+    - [Согласование руководителя отдела правовой поддержки операционной деятельности](#согласование-руководителя-отдела-правовой-поддержки-операционной-деятельности)
+    - [Доработка в группе заданий](#доработка-в-группе-заданий)
+  - [Согласование финансового департамента](#согласование-финансового-департамента)
+    - [Согласование бухгалтера](#согласование-бухгалтера)
+    - [Согласование главного бухгалтера](#согласование-главного-бухгалтера)
+    - [Согласование руководителя отдела по финансовым расчетам](#согласование-руководителя-отдела-по-финансовым-расчетам)
+    - [Согласование консультанта по налогам](#согласование-консультанта-по-налогам)
+    - [Доработка в группе заданий](#доработка-в-группе-заданий-1)
+  - [Проверка наличия правок](#проверка-наличия-правок)
+    - [Повторное согласование правок](#повторное-согласование-правок)
+    - [Повторное согласование юриста](#повторное-согласование-юриста)
+    - [Повторное согласование бухгалтера](#повторное-согласование-бухгалтера)
+  - [Согласование руководителей и директоров](#согласование-руководителей-и-директоров)
+    - [Согласование руководителя](#согласование-руководителя)
+    - [Согласование президента](#согласование-президента)
+    - [Согласование финансового директора](#согласование-финансового-директора)
+    - [Согласование управляющего директора](#согласование-управляющего-директора)
+    - [Доработка в группе заданий](#доработка-в-группе-заданий-2)
+  - [Подписание](#подписание)
+  - [Оплата](#оплата)
+    - [Доработка с этапа оплаты](#доработка-с-этапа-оплаты)
+  - [Отправка контрагенту](#отправка-контрагенту)
+  - [Архивирование](#архивирование)
+    - [Передача документа в архив](#передача-документа-в-архив)
+- [Требования к системе](#требования-к-системе)
+  - [Общие требования](#общие-требования)
+  - [Функциональные требования](#функциональные-требования)
+  - [Нефункциональные требования](#нефункциональные-требования)
+- [Условия завершения процесса](#условия-завершения-процесса)
+  - [Успешное завершение](#успешное-завершение)
+  - [Прерывание процесса](#прерывание-процесса)
+- [Сроки выполнения](#сроки-выполнения)
+- [Приложения](#приложения)
+  - [Схема BPMN](#схема-bpmn)
+
 # Введение
 
 ## Цель проекта
