Добавлено системное ознакомление документальному сопроводителю

--- a/Техническое задание счет договор/Техническое задание на процесс Счет договор.md
+++ b/Техническое задание счет договор/Техническое задание на процесс Счет договор.md
@@ -100,6 +100,8 @@
 
 Если нет, то происходит параллельное согласование документа инициатором и держателем бюджета. 
 
+В случае, если ЦФО в карточке отмечено галочкой “Документальное сопровождение”, то карточка счет-договора отправляется системой на ознакомление специалисту, который ведет документальное сопровождение выбранного направления.
+
 В случае отказа в согласовании, статус меняется на "Процесс отозван". 
 
 Если документ утвержден, он направляется на согласование юридического департамента, затем на согласование финансового департамента, и после этого на согласование руководителей и директоров. 
